--- a/exercise8.css
+++ b/exercise8.css
@@ -4,18 +4,18 @@
   box-sizing: border-box;
 }
 
-.main {
+main {
   width: 960px;
   margin: 50px auto;
 }
 
-.list-item {
-padding:20px;
-list-style:none;
+.item {
+  margin-bottom: 50px;
 }
 
-.list-item:first-child {
-  margin-top: 50px;
+.list-item {
+  padding: 20px;
+  list-style: none;
 }
 
 .list-item:nth-child(odd) {
@@ -33,4 +33,18 @@ list-style:none;
   width: 30%;
   margin-right: 5%;
   margin-bottom: 40px;
+}
+
+.box:first-child,
+.box:nth-child(5),
+.box:last-child {
+  background-color: orange;
+}
+
+.box:nth-child(3n) {
+  margin-right: 0;
+}
+
+.box:nth-last-child(-n + 3) {
+  margin-bottom: 0;
 }
